# cgeom

./: .gitignore  pyproject.toml  readme.md  release.sh
examples/: ex_base.py  ex_interpolate.py  ex_model_from_limit_line.py  ex_path.py  ex_plot_octagons.py  ex_plot_racetracks.py  ex_plot_rectellipes.py  ex_transverse_envelopes.py  ex_uniform_ellipses.py  example.py
examples/lhc/: job_inj.madx
examples/lhc/data/: ap_arc12b1.tfs  ap_arc12b2.tfs  ap_arc45b1.tfs  ap_arc45b2.tfs  ap_arc56b1.tfs  ap_arc56b2.tfs  ap_arc81b1.tfs  ap_arc81b2.tfs  ap_ir1b1.tfs  ap_ir1b2.tfs  ap_ir2b1.tfs  ap_ir2b2.tfs  ap_ir3b1.tfs  ap_ir3b2.tfs  ap_ir4b1.tfs  ap_ir4b2.tfs  ap_ir5b1.tfs  ap_ir5b2.tfs  ap_ir6b1.tfs  ap_ir6b2.tfs  ap_ir7b1.tfs  ap_ir7b2.tfs  ap_ir8b1.tfs  ap_ir8b2.tfs  offset.ip1.b1.tfs  offset.ip1.b2.tfs  offset.ip5.b1.tfs  offset.ip5.b2.tfs  survey_arc12b1.tfs  survey_arc12b2.tfs  survey_arc45b1.tfs  survey_arc45b2.tfs  survey_arc56b1.tfs  survey_arc56b2.tfs  survey_arc81b1.tfs  survey_arc81b2.tfs  survey_ir1b1.tfs  survey_ir1b2.tfs  survey_ir2b1.tfs  survey_ir2b2.tfs  (+36 more)
src/cgeom/: __init__.py  beam_aperture.py  cwrapper.py  path.py
src/cgeom/clib/: base.c  base.h  beam_aperture.c  beam_aperture.h  beam_pipes.h  path.c  path.h  shape2d.c  shape2d.h
tests/: test_base.py  test_path.py
